# serializer version: 1
# name: test_generated_alert_reaches_mobile_push_gateway[android-custom-tag-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '16',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'testtest',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '16',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
  })
# ---
# name: test_generated_alert_reaches_mobile_push_gateway[android-custom-tag-no-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '16',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'testtest',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '16',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
  })
# ---
# name: test_generated_alert_reaches_mobile_push_gateway[android-no-custom-tag-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'base_alert',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '16',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'base_alert',
        'timeout': 900,
      }),
      'message': 'testtest',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '16',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
  })
# ---
# name: test_generated_alert_reaches_mobile_push_gateway[android-no-custom-tag-no-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'sticky': True,
        'subject': 'bla bla bla',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '16',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'sticky': True,
        'subject': 'bla bla bla',
        'timeout': 900,
      }),
      'message': 'testtest',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '16',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
  })
# ---
# name: test_generated_alert_reaches_mobile_push_gateway[ios-custom-tag-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '26',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'testtest',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '26',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
  })
# ---
# name: test_generated_alert_reaches_mobile_push_gateway[ios-custom-tag-no-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '26',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'custom-tag',
        'timeout': 900,
      }),
      'message': 'testtest',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '26',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
  })
# ---
# name: test_generated_alert_reaches_mobile_push_gateway[ios-no-custom-tag-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'base_alert',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '26',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'persistent': True,
        'sticky': True,
        'subject': 'bla bla bla',
        'tag': 'base_alert',
        'timeout': 900,
      }),
      'message': 'testtest',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '26',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
  })
# ---
# name: test_generated_alert_reaches_mobile_push_gateway[ios-no-custom-tag-no-default-tag]
  dict({
    'cleared': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'sticky': True,
        'subject': 'bla bla bla',
        'timeout': 900,
      }),
      'message': 'clear_notification',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '26',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
    'sent': dict({
      'data': dict({
        'actions': list([
          dict({
            'action': 'confirm-test',
            'title': 'Done',
          }),
        ]),
        'color': '#c7a600',
        'group': 'derp',
        'ledColor': '#d8a22c',
        'sticky': True,
        'subject': 'bla bla bla',
        'timeout': 900,
      }),
      'message': 'testtest',
      'push_token': 'test-push-token',
      'registration_info': dict({
        'app_id': 'io.homeassistant.test',
        'app_version': '2026.10',
        'os_version': '26',
        'webhook_id': 'test-phone-webhook',
      }),
      'title': 'TEst text test',
    }),
  })
# ---
